samples/_failures_safe/1761669448_1f020e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c95cee3.c: In function ‘main’:
./samples/SAFE/__tmp_8c95cee3.c:170:5: error: expected expression at end of input
  170 |     if (a < 0 ||
      |     ^~
./samples/SAFE/__tmp_8c95cee3.c:170:5: error: expected declaration or statement at end of input
